# offlr

./: CMakeLists.txt  temp.cpp
include/: output.h  rasterizer.h  timer.h
src/: CMakeLists.txt  cudatest.cu  format.h  interval.h  list.h  main.cpp  metrics.cpp  metrics.h  output.cpp  output.h  raster.h  rasterizer.cpp  rasterizer.h  registry.h  threadpool.h  timer.h  utils.h
src/raytracing/: camera.h  constants.h  geometry.h  intersection.h  material.h  pipeline.h  ray.h  renderer.h  tracer.h
tests/: CMakeLists.txt  RGBsampling.cpp  camera_test.cpp  listtest.cpp  midpoint_line.cpp  raytracing_camera_test.cpp  triangle_test.cpp
